# ClaimGuard-AI

./: Makefile  README.md  pyproject.toml
claimguard_ai/: __init__.py  dataset.py  features.py  plots.py
claimguard_ai/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb
