[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "claimguard_ai"
version = "0.0.1"
description = "Guarding insurers from fraudulent claims using AI"
authors = [
  { name = "Abby" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["claimguard_ai"]
include = ["pyproject.toml", "claimguard_ai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["claimguard_ai"]
force-sort-within-sections = true

